--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,234 +1,99 @@
-/** {
-    box-sizing: border-box;
-    border: 2px solid tomato
-}*/
 
-body {
-    background-color: #0F2E4C;
-    font-family: "Julius Sans One", sans-serif;
+@media only screen and (min-width: 49em) {
+  /*IPAD LANDSCAPE*/
+    #gallery {
+      margin-top: 2em;
+      margin-bottom: 3em;
+    }
+
+    #gallery li {
+      max-width: 45%;
+      margin-left: 2.5%;
+      margin-right: 2.5%;
+    }
+
+    .wrapper {
+      display: flex;
+      flex-direction: row;
+      font-size: 1em;
+    }
+
+    .profile-photo { 
+      margin: 2em ;
+    }
+
+    #primary {
+      width: 50%;
+      float: left;
+    }
+  
+    #secondary {
+      width: 40%;
+      float: right;
+      margin-right: 10%;
+      margin-left: 10%;
+    }
+
+    .footer-button {
+      margin: 0 1em;
+    }
+
+    #copyright {
+      width: 80%;
+      padding: 1em 10% 1em 10%;
+    }
+}
+
+@media only screen and (min-width: 49em) and (max-width: 69.99em) {
+  /*IPAD LANDSCAPE ONLY*/
+    #logoName {
+      margin-top: 1em;
+  }
+
+    #logoJob {
+      margin-left: 5%;
+      margin-bottom: -1.25em;
+      bottom: -2em; 
+      max-width: 10em;
+    }
+
+    #logoName, 
+    #logoJob {
+      clear: left;
+      text-align: left;
+      padding-left: 10%;
+      position: relative;
+    }
+
+    nav {
+      float: right;
+      text-align: right;
+      padding-right: 10%;
+      max-width: auto;
+    }
 }
 
 
+@media only screen and (min-width: 70em) {
+  /*DESKTOP SMALL*/
+  body {
+    max-width: 80%;
+    margin: 0 10%;
+    font-size: 1.2rem;
+  }
 
-a, a:before, a:after {
-    text-decoration: none;
-    color: inherit;
-}
 
-li {
-    list-style: none;
-}
-
-/******************************************************
-		HEADER
-*******************************************************/
-
-.header {
-    box-sizing: border-box;
-    /*background-color: #FFB03B;*/
-    background-color: #1A4C80;
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-}
-
-#logoName {
-    font-family: "Rock Salt", serif;
-    color: #fff;
-    font-size: 2em;
-    text-shadow: 0em 0em 0.125em #000, .1em .1em .25em #000;
-    margin-top: 0.67em;
-    margin-bottom: 0;
-}
-
-#logoJob {
-    font-family: "Julius Sans One", serif;
-    color: #fff;
-    font-size: 1em;
-    text-shadow: 0.08em 0.08em 0.2em #000;
-    margin-top: 0.67em;
-    margin-bottom: 0;
-
-}
-/***********************************************
-NAVIGATION
-***********************************************/
-
-nav {
-	background-color: #2E8AE6;
-  	padding: 10px 0;
- 	margin: 20px 0 0;
-  	text-align: center;
-}
-
-nav ul {
- 	margin: 0 auto;
-  	padding: 0;
-}
-
-nav li {
-  	display: inline-block;
-}
-
-nav a {
-  	font-weight: 800;
- 	padding: 15px 10px;
- 	color: #fff;
-}	
-
-nav .selected {
-    background-color: #246BB2;
-    border: 0.1em solid #0F2E4C;
 }
 
 
-/**************************************************
-		Gallery 
-*****************************************************/
-
-
-#gallery {
-  	margin: 0 0;
-  	padding: 0;
-  	list-style: none;
-  	display: flex;
-  	flex-flow: row wrap;
+@media only screen and (min-width: 100em) {
+  /*DESKTOP LARGE*/
+  #gallery li {
+      max-width: 30%;
+      margin-left: 1.6667%;
+      margin-right: 1.6667%;
+    }
 }
 
-#gallery li {
-  	width: 100%;
-  	margin-top: 1em;
-  	background-color: #143D66;
-  	color: #000;
-}
-
-#gallery li a {
-	display: block;
-}
-
-#gallery li a img {
-	float: left;
-	background-color: lightblue;
-	min-width: 50%;
-	width: 150px;
-	height: 150px;
-}
-
-.galleryInfo {
-  	float: right;
-  	width: 50%;
-  	margin: 0;
-  	padding: 0;
-  	font-size: 0.75em;
-  	color: #000;
-}
-
-
-#gallery li a p,
-#gallery li a h3 {
-  	margin: 0.5em 0.25em 0 0.5em;
-  	color: #fff;
-}
-
-/***********************************************
-ABOUT 
-***********************************************/
-
-.wrapper {
-	max-width: 80%;
-	margin: 3em auto;
-	padding: 0 5%;
-	font-size: .75em;
-	color: #fff;
-}
-
-
-
-.profile-photo {
-  	max-width: 150px;
-  	border-radius: 100%;
-}
-
-#about-text {
-	display: block;
-	max-width: 100%;
-	margin-left: auto;
-	margin-right: auto;
-}
-
-
-/***********************************************
-FOOTER
-***********************************************/
-
-#foot-buttons {
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
-	background-color: #2E8AE6;
-	padding: 3em auto;
-	margin-top: 0;
-	margin-bottom: 0;
-}
-
-.footer-button,
-#copyright {
-	color: #fff;
-	margin: 0;
-	padding: 7px 7px;
-}
-
-#footer {
-  	font-size: 0.75em;
-  	text-align: center;
-  	padding-top: 50px;
-  	display: flex;
-  	flex-direction: column;
-
-}
-
-#copyright {
-	font-size: .8em;
-	background-color: #1A4C80;
-}
-
-.social-icon {
-	width: 20px;
-	height: 20px;
-	margin: 0 5px;
-	color: #fff;
-}
-
-/***********************************************
-PAGE: CONTACT
-***********************************************/
-
-.contact-info {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-  font-size: 0.9em;
-}
-
-.contact-info a {
-  display: block;
-  min-height: 20px;
-  background-repeat: no-repeat;
-  background-size: 20px 20px;
-  padding: 0 0 0 30px;
-  margin: 0 0 10px;
-}
-
-.contact-info li.phone a {
-  background-image: url('../img/phone.png');
-}
-
-.contact-info li.mail a {
-  background-image: url('../img/mail.png');
-}
-
-.contact-info li.twitter a {
-  background-image: url('../img/twitter.png');
-}
+  
 
