--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,99 +1,99 @@
 
 @media only screen and (min-width: 49em) {
-  /*IPAD LANDSCAPE*/
+/*TABLET PORTRAIT*/
+
+
     #gallery {
-      margin-top: 2em;
-      margin-bottom: 3em;
+      	margin-top: 2em;
+      	margin-bottom: 3em;
     }
 
     #gallery li {
-      max-width: 45%;
-      margin-left: 2.5%;
-      margin-right: 2.5%;
+      	max-width: 45%;
+      	argin-left: 2.5%;
+      	margin-right: 2.5%;
     }
 
     .wrapper {
-      display: flex;
-      flex-direction: row;
-      font-size: 1em;
+      	display: flex;
+      	flex-direction: row;
+      	font-size: 1em;
     }
 
     .profile-photo { 
-      margin: 2em ;
+      	margin: 2em ;
     }
 
     #primary {
-      width: 50%;
-      float: left;
+      	width: 50%;
+      	float: left;
     }
   
     #secondary {
-      width: 40%;
-      float: right;
-      margin-right: 10%;
-      margin-left: 10%;
+      	width: 40%;
+      	float: right;
+      	margin-right: 10%;
+      	margin-left: 10%;
     }
 
     .footer-button {
-      margin: 0 1em;
+      	margin: 0 1em;
     }
 
     #copyright {
-      width: 80%;
-      padding: 1em 10% 1em 10%;
+      	width: 80%;
+      	padding: 1em 10% 1em 10%;
     }
 }
 
 @media only screen and (min-width: 49em) and (max-width: 69.99em) {
-  /*IPAD LANDSCAPE ONLY*/
-    #logoName {
-      margin-top: 1em;
+/*TABLET LANDSCAPE ONLY*/
+/*    #logoName {
+      	margin-top: 1em;
   }
 
     #logoJob {
-      margin-left: 5%;
-      margin-bottom: -1.25em;
-      bottom: -2em; 
-      max-width: 10em;
+      	margin-left: 5%;
+      	margin-bottom: -1.25em;
+      	bottom: -2em; 
+      	max-width: 10em;
     }
 
     #logoName, 
     #logoJob {
-      clear: left;
-      text-align: left;
-      padding-left: 10%;
-      position: relative;
+      	clear: left;
+      	text-align: left;
+      	padding-left: 10%;
+      	position: relative;
     }
 
     nav {
-      float: right;
-      text-align: right;
-      padding-right: 10%;
-      max-width: auto;
+      	float: right;
+      	text-align: right;
+      	padding-right: 10%;
+      	max-width: auto;
     }
 }
-
+*/
 
 @media only screen and (min-width: 70em) {
-  /*DESKTOP SMALL*/
-  body {
-    max-width: 80%;
-    margin: 0 10%;
-    font-size: 1.2rem;
-  }
+/*DESKTOP SMALL*/
+  	/*body {
+    	max-width: 80%;
+    	margin: 0 10%;
+    	font-size: 1.2rem;
+  	}
 
 
 }
-
+*/
 
 @media only screen and (min-width: 100em) {
-  /*DESKTOP LARGE*/
-  #gallery li {
-      max-width: 30%;
-      margin-left: 1.6667%;
-      margin-right: 1.6667%;
+/*DESKTOP LARGE*/
+  	/*#gallery li {
+      	max-width: 30%;
+      	margin-left: 1.6667%;
+      	margin-right: 1.6667%;
     }
 }
-
-  
-
+*/
