--- a/css/styles.css
+++ b/css/styles.css
@@ -66,7 +66,7 @@ nav ul {
     padding: 0;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: center;
 }
 
 nav li {
