--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,6 +1,6 @@
 
-@media only screen and (min-width: 49em) {
-/*TABLET PORTRAIT*/
+@media only screen and (min-width: 39em) {
+/*TABLET LANDSCAPE*/
 
 
     #gallery {
