--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,16 +1,17 @@
 
-@media only screen and (min-width: 39em) {
+@media only screen and (min-width: 49em) {
 /*TABLET LANDSCAPE*/
 
 
     #gallery {
-      	margin-top: 2em;
-      	margin-bottom: 3em;
+      	/*margin-top: 1em;
+      	margin-bottom: 1em;*/
+      	margin: 1em 5% 1em 5%;
     }
 
     #gallery li {
       	max-width: 45%;
-      	argin-left: 2.5%;
+      	margin-left: 2.5%;
       	margin-right: 2.5%;
     }
 
@@ -21,7 +22,7 @@
     }
 
     .profile-photo { 
-      	margin: 2em ;
+      	margin: 2em;
     }
 
     #primary {
