--- a/css/responsive.css
+++ b/css/responsive.css
@@ -4,15 +4,14 @@
 
 
     #gallery {
-      	/*margin-top: 1em;
-      	margin-bottom: 1em;*/
-      	margin: 1em 5% 1em 5%;
+      	margin: 1em 2.5% 1em 2.5%;
+      	
     }
 
     #gallery li {
-      	max-width: 45%;
-      	margin-left: 2.5%;
-      	margin-right: 2.5%;
+      	max-width: 46%;
+      	margin-left: 2%;
+      	margin-right: 2%;
     }
 
     .wrapper {
@@ -47,7 +46,7 @@
     }
 }
 
-@media only screen and (min-width: 49em) and (max-width: 69.99em) {
+/*@media only screen and (min-width: 49em) and (max-width: 69.99em) {*/
 /*TABLET LANDSCAPE ONLY*/
 /*    #logoName {
       	margin-top: 1em;
@@ -77,7 +76,7 @@
 }
 */
 
-@media only screen and (min-width: 70em) {
+/*@media only screen and (min-width: 70em) {*/
 /*DESKTOP SMALL*/
   	/*body {
     	max-width: 80%;
@@ -89,7 +88,7 @@
 }
 */
 
-@media only screen and (min-width: 100em) {
+/*@media only screen and (min-width: 100em) {*/
 /*DESKTOP LARGE*/
   	/*#gallery li {
       	max-width: 30%;
