--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,5 +1,9 @@
-
-@media only screen and (min-width: 49em) {
+@media only screen and (min-width: 600px) {
+    #gallery li {
+		font-size: 1.25rem;
+    }
+}
+@media only screen and (min-width: 800px) {
 /*TABLET LANDSCAPE*/
 
 
@@ -12,6 +16,7 @@
       	max-width: 46%;
       	margin-left: 2%;
       	margin-right: 2%;
+		font-size: 1rem;
     }
 
     .wrapper {
