--- a/css/styles.css
+++ b/css/styles.css
@@ -222,7 +222,7 @@ PAGE: CONTACT
 ***********************************************/
 
 
-#secondary {
+#contact-secondary {
 	padding: .5em .5em .5em;
 	background-color: #1A4C80;
 }
