--- a/css/styles.css
+++ b/css/styles.css
@@ -85,11 +85,9 @@ nav .selected {
     border: 0.1em solid #0F2E4C;
 }
 
-
 /**************************************************
 		Gallery 
 *****************************************************/
-
 
 #gallery {
   	margin: .5em 0 .5em;
@@ -162,8 +160,8 @@ ABOUT
 
 
 .profile-photo {
-	width: 100%;
-  	margin: 0 auto 2em auto;
+	width: 80%;
+  	margin: 0 10% 1em 10%;
   	/*max-width: 90%;*/
   	border-radius: 100%;
 }
@@ -173,6 +171,48 @@ ABOUT
 	max-width: 100%;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+/***********************************************
+PAGE: CONTACT
+***********************************************/
+
+#contact-secondary {
+	padding: .5em .5em .5em;
+	background-color: #1A4C80;
+}
+
+#contact-secondary h3 {
+	margin-top: .5em;
+	margin-bottom: .5em;
+}
+
+.contact-info {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    font-size: 0.9em;
+}
+
+.contact-info a {
+    display: block;
+    min-height: 20px;
+    background-repeat: no-repeat;
+    background-size: 20px 20px;
+    padding: 0 0 0 30px;
+    margin: 0 0 10px;
+}
+
+.contact-info li.phone a {
+    background-image: url('../img/phone.png');
+}
+
+.contact-info li.mail a {
+    background-image: url('../img/mail.png');
+}
+
+.contact-info li.twitter a {
+    background-image: url('../img/twitter.png');
 }
 
 
@@ -216,42 +256,3 @@ FOOTER
 	margin: 0 5px;
 	color: #fff;
 }
-
-/***********************************************
-PAGE: CONTACT
-***********************************************/
-
-
-#contact-secondary {
-	padding: .5em .5em .5em;
-	background-color: #1A4C80;
-}
-
-.contact-info {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    font-size: 0.9em;
-}
-
-.contact-info a {
-    display: block;
-    min-height: 20px;
-    background-repeat: no-repeat;
-    background-size: 20px 20px;
-    padding: 0 0 0 30px;
-    margin: 0 0 10px;
-}
-
-.contact-info li.phone a {
-    background-image: url('../img/phone.png');
-}
-
-.contact-info li.mail a {
-    background-image: url('../img/mail.png');
-}
-
-.contact-info li.twitter a {
-    background-image: url('../img/twitter.png');
-}
-
