responsive css for all pages

--- a/css/styles.css
+++ b/css/styles.css
@@ -180,6 +180,7 @@ PAGE: CONTACT
 #contact-secondary {
 	padding: .5em .5em .5em;
 	background-color: #1A4C80;
+  width: 50%;
 }
 
 #contact-secondary h3 {
